2010-12-13  Janus Weil  <janus@gcc.gnu.org>

PR fortran/46841
	* trans-expr.c (gfc_trans_subcomponent_assign): Handle array-valued
	procedure pointer components.

2010-12-13  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/46841
	* gfortran.dg/proc_ptr_comp_26.f90: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@167750 138bc75d-0d04-0410-961f-82ee72b054a4